@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-21T01:20:39Z",
-  "count_outdated" : 345,
-  "uniques_outdated" : 196,
-  "count" : 372,
-  "uniques" : 214,
+  "timestamp" : "2022-06-21T16:23:51Z",
+  "count_outdated" : 346,
+  "uniques_outdated" : 197,
+  "count" : 373,
+  "uniques" : 215,
   "clones" : [
-    {
-      "timestamp": "2022-06-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
@@ -100,6 +93,13 @@
       "timestamp": "2022-06-20T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
